# home-assistant

./: .gitignore  LICENSE  README.md  execute.bat  pyproject.toml  set_keyring_password.py
home-assistant/: __main__.py  dependency_container.py
home-assistant/commands/: base_command.py  close_cam.py  command_executer.py  maps_command.py  open_cam.py  open_cam_config.json  open_webpage.py  set_timer.py
home-assistant/speech_recognition/: local_interpreter.py  sentence_matching.py
home-assistant/state_machine/: IState.py  activation_state.py  keyword_state.py  state_machine.py
home-assistant/text_to_speech/: computer_voice.py
