[tool.poetry]
name = "home-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pvporcupine = "^2.0.4"
pipwin = "^0.5.1"
Wave = "^0.0.2"
sounddevice = "^0.4.4"
pocketsphinx = {path = "pocketsphinx-0.1.15-cp39-cp39-win_amd64.whl"}
sentence-transformers = "^2.1.0"
playsound = "^1.3.0"
dependency-injector = "^4.38.0"
SpeechRecognition = "^3.8.1"
pyaudio = {path = "PyAudio-0.2.11-cp39-cp39-win_amd64.whl"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
